--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       return;
     }
 
-    alert("Gợi ý: " + result.parkingID);
+    alert("Gợi ý: " + result.parkingID +"\n" + "Tình trạng nhà xe: " + result.status);
 
     drawRoute(result.path, 'green');
 
